--- a/site/slides.css
+++ b/site/slides.css
@@ -28,6 +28,13 @@ section > .centered {
     text-align: center;
 }
 
+.challenge:before {
+  content: "\1F3C2 ";/🏂*/
+}
+.meditation:before {
+  content: "\2615    "; /* ☕ */
+}
+
 .left {
     float: left;
 }
@@ -57,24 +64,42 @@ section .medium-font {
     font-size: 0.8em;
 }
 
-.w30 {
-    width: 30%;
+.w10 {
+  width: 10%;
 }
 
-.w50 {
-    width: 50%;
+.w20 {
+  width: 20%;
+}
+
+.w30 {
+    width: 30%;
 }
 
 .w40 {
     width: 40%;
 }
 
+.w50 {
+    width: 50%;
+}
+
 .w60 {
     width: 60%;
 }
+
 .w70 {
     width: 70%;
 }
+
+.w80 {
+  width: 80%;
+}
+
+.w90 {
+  width: 90%;
+}
+
 
 .margin-left {
     margin-left: 10px;
@@ -83,6 +108,7 @@ section .medium-font {
 .margin-right {
     margin-right: 10px;
 }
+
 .margin-top {
     margin-top: 10px;
 }
@@ -91,10 +117,10 @@ section .medium-font {
     margin-bottom: 10px;
 }
 
-
 .clear {
     clear: both;
 }
+
 .livedoc {
     border: none;
     width: 100%;
@@ -110,7 +136,11 @@ section .medium-font {
 
 
 .reveal table th, .reveal table td {
-    padding: 0 0.5em 0 0.5em; 
+  padding: 0 0.5em 0 0.5em;
+}
+
+.reveal table {
+  margin: 0 0 0 0;
 }
 
 .reveal table.grid-none td { /* some theme css files override border-bottom without respecting the table attributes */
@@ -144,7 +174,7 @@ section .medium-font {
 
 .reveal section img {
   margin: 0;
-  border: 1px solid #5B80D4;
+  border: none;
 }
 
 .reveal section p, h1, h2, div {
